--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -24,7 +24,7 @@
 
     <input type="submit" onclick="clickButt()" value="Scan..." >
 
-    <script src="app.js"></script>
+    <script src='./app.js'></script>
 </body>
 
 </html>
