Upload file to client

--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -21,8 +21,14 @@
         </div>
 
     </header>
+    <main class="main">
 
-    <input type="submit" onclick="clickButt()" value="Scan..." >
+            <input type="submit" onclick="clickButt()" value="Scan..." >
+
+
+    </main>
+
+    <img id="image" src=""></img>
 
     <script src='./app.js'></script>
 </body>
